# rustdoku

./: Cargo.toml  README.md
src/: block.rs  main.rs  sudoku.rs
