[package]
name = "rustdoku"
version = "0.1.0"
authors = ["Alden Davidson <adavidson+github@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.22"
tui = { version = "0.17", default-features = false, features = ['crossterm']}